--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,10 +10,11 @@
                 "${workspaceRoot}\\main.cpp",
                 "${workspaceRoot}\\Framework\\Map\\FloorMap.cpp",
                 "${workspaceRoot}\\Framework\\Character\\Character.cpp",
-                "${workspaceRoot}\\Framework\\UserInterface\\BaseUI.cpp",
+                "${workspaceRoot}\\Framework\\UserInterface\\DataController.cpp",
                 "${workspaceRoot}\\Framework\\Render\\CLI\\Renderer_CLI.cpp",
                 "${workspaceRoot}\\Framework\\Input\\InputCtrl.cpp",
-                "${workspaceRoot}\\Source\\GameMain.cpp",                
+                "${workspaceRoot}\\Source\\GameMain.cpp",        
+                "${workspaceRoot}\\Source\\Character\\Player.cpp",           
                 "-o",
                 "${workspaceRoot}\\EscapeLab.exe"
             ],
@@ -34,9 +35,11 @@
                 "${workspaceRoot}\\main.cpp",
                 "${workspaceRoot}\\Framework\\Map\\FloorMap.cpp",
                 "${workspaceRoot}\\Framework\\Character\\Character.cpp",
-                "${workspaceRoot}\\Framework\\UserInterface\\BaseUI.cpp",
+                "${workspaceRoot}\\Framework\\UserInterface\\DataController.cpp",
                 "${workspaceRoot}\\Framework\\Render\\CLI\\Renderer_CLI.cpp",
-                "${workspaceRoot}\\Source\\GameMain.cpp",    
+                "${workspaceRoot}\\Framework\\Input\\InputCtrl.cpp",
+                "${workspaceRoot}\\Source\\GameMain.cpp",        
+                "${workspaceRoot}\\Source\\Character\\Player.cpp",     
                 "-o",
                 "${workspaceRoot}\\Debug.exe"
             ],
