--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,7 @@
                 "${workspaceRoot}\\Framework\\Map\\FloorMap.cpp",
                 "${workspaceRoot}\\Framework\\Character\\Character.cpp",
                 "${workspaceRoot}\\Framework\\UserInterface\\DataController.cpp",
+                "${workspaceRoot}\\Framework\\UserInterface\\LogController.cpp",
                 "${workspaceRoot}\\Framework\\Render\\CLI\\Renderer_CLI.cpp",
                 "${workspaceRoot}\\Framework\\Input\\InputCtrl.cpp",
                 "${workspaceRoot}\\Source\\GameMain.cpp",        
@@ -36,6 +37,7 @@
                 "${workspaceRoot}\\Framework\\Map\\FloorMap.cpp",
                 "${workspaceRoot}\\Framework\\Character\\Character.cpp",
                 "${workspaceRoot}\\Framework\\UserInterface\\DataController.cpp",
+                "${workspaceRoot}\\Framework\\UserInterface\\LogController.cpp",
                 "${workspaceRoot}\\Framework\\Render\\CLI\\Renderer_CLI.cpp",
                 "${workspaceRoot}\\Framework\\Input\\InputCtrl.cpp",
                 "${workspaceRoot}\\Source\\GameMain.cpp",        
