--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,7 +12,7 @@
                 "${workspaceRoot}\\Framework\\Character\\Character.cpp",
                 "${workspaceRoot}\\Framework\\UserInterface\\DataController.cpp",
                 "${workspaceRoot}\\Framework\\UserInterface\\LogController.cpp",
-                "${workspaceRoot}\\Framework\\Render\\CLI\\Renderer_CLI.cpp",
+                "${workspaceRoot}\\Framework\\Render\\Renderer_CLI.cpp",
                 "${workspaceRoot}\\Framework\\Input\\InputCtrl.cpp",
                 "${workspaceRoot}\\Source\\GameMain.cpp",        
                 "${workspaceRoot}\\Source\\Character\\Player.cpp",           
@@ -38,7 +38,7 @@
                 "${workspaceRoot}\\Framework\\Character\\Character.cpp",
                 "${workspaceRoot}\\Framework\\UserInterface\\DataController.cpp",
                 "${workspaceRoot}\\Framework\\UserInterface\\LogController.cpp",
-                "${workspaceRoot}\\Framework\\Render\\CLI\\Renderer_CLI.cpp",
+                "${workspaceRoot}\\Framework\\Render\\Renderer_CLI.cpp",
                 "${workspaceRoot}\\Framework\\Input\\InputCtrl.cpp",
                 "${workspaceRoot}\\Source\\GameMain.cpp",        
                 "${workspaceRoot}\\Source\\Character\\Player.cpp",     
