--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,52 +1,31 @@
 {
+    // See https://go.microsoft.com/fwlink/?LinkId=733558 
+    // for the documentation about the tasks.json format
     "version": "2.0.0",
     "tasks": [
         {
             "type": "shell",
-            "label": "g++.exe build active2 file",
-            "command": "C:\\MinGW\\bin\\g++.exe",
+            "label": "g++ build active file",
+            "command": "/usr/bin/g++",
             "args": [
+                "-std=c++11",
                 "-g",
-                "${workspaceRoot}\\main.cpp",
-                "${workspaceRoot}\\Framework\\Map\\FloorMap.cpp",
-                "${workspaceRoot}\\Framework\\Character\\Character.cpp",
-                "${workspaceRoot}\\Framework\\UserInterface\\DataController.cpp",
-                "${workspaceRoot}\\Framework\\UserInterface\\LogController.cpp",
-                "${workspaceRoot}\\Framework\\Render\\Renderer_CLI.cpp",
-                "${workspaceRoot}\\Framework\\Input\\InputCtrl.cpp",
-                "${workspaceRoot}\\Source\\GameMain.cpp",        
-                "${workspaceRoot}\\Source\\Character\\Player.cpp",           
+                "${workspaceRoot}/*.cpp",
+                "${workspaceRoot}/*/*.cpp",
+                "${workspaceRoot}/*/*/*.cpp",      
                 "-o",
-                "${workspaceRoot}\\EscapeLab.exe"
+                "${workspaceRoot}/EscapeLab",
+                "-lncurses"
             ],
             "options": {
-                "cwd": "C:\\MinGW\\bin"
+                "cwd": "/usr/bin"
             },
             "problemMatcher": [
                 "$gcc"
             ],
-            "group": "build"
-        },
-        {
-            "type": "shell",
-            "label": "g++.exe build active file",
-            "command": "C:\\MinGW\\bin\\g++.exe",
-            "args": [
-                "-g",
-                "${workspaceRoot}\\main.cpp",
-                "${workspaceRoot}\\Framework\\Map\\FloorMap.cpp",
-                "${workspaceRoot}\\Framework\\Character\\Character.cpp",
-                "${workspaceRoot}\\Framework\\UserInterface\\DataController.cpp",
-                "${workspaceRoot}\\Framework\\UserInterface\\LogController.cpp",
-                "${workspaceRoot}\\Framework\\Render\\Renderer_CLI.cpp",
-                "${workspaceRoot}\\Framework\\Input\\InputCtrl.cpp",
-                "${workspaceRoot}\\Source\\GameMain.cpp",        
-                "${workspaceRoot}\\Source\\Character\\Player.cpp",     
-                "-o",
-                "${workspaceRoot}\\Debug.exe"
-            ],
-            "options": {
-                "cwd": "C:\\MinGW\\bin"
+            "group": {
+                "kind": "build",
+                "isDefault": true
             }
         }
     ]
