--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,8 @@
         "ios": "cpp",
         "locale": "cpp",
         "mutex": "cpp",
-        "ratio": "cpp"
+        "ratio": "cpp",
+        "list": "cpp",
+        "__functional_03": "cpp"
     }
 }
